# tici_test

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  analyze_freshness.py  freshness.py  insert_data.py  main.py  query.sh  tici.py
doc/: design_analyze_freshness.md  design_freshness.md  design_insert_data.md  design_main.md  design_prepare_data.md  design_tici.md
python-version/: analyze_freshness.py  insert_data.py  main.py  prepare_data.py  tici.py
scripts/: example.sh  tar_myself.sh
src/: common.rs  create_table.rs  drop_table.rs  insert_logic.rs  insert_table.rs  lib.rs  log.rs  query_table.rs  sql_pool.rs
