[package]
name = "tici_test_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
flate2 = "1.1"
glob = "0.3"
mysql = "26.0"
rayon = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
